trying to fix border-radius issue on ioS for slider.

--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -183,6 +183,7 @@ html {
   }
 
   .box {
+    border-radius: 5rem;
     height: 100%;
     // max-height: 800px;
     width: 100%;
